// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedBarrier renders with default values 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 0 0 A 10 10 0 0 1 -0.1921471959676957 1.9509032201612824 L 5.692564486451687 3.121445152258052 A 16 16 0 0 0 6 0 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M -0.1921471959676957 1.9509032201612824 A 10 10 0 0 1 -0.7612046748871322 3.826834323650898 L 4.782072520180588 6.1229349178414365 A 16 16 0 0 0 5.692564486451687 3.121445152258052 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M -0.7612046748871322 3.826834323650898 A 10 10 0 0 1 -1.6853038769745474 5.555702330196022 L 3.3035137968407238 8.889123728313635 A 16 16 0 0 0 4.782072520180588 6.1229349178414365 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M -1.6853038769745474 5.555702330196022 A 10 10 0 0 1 -2.9289321881345245 7.071067811865475 L 1.3137084989847612 11.31370849898476 A 16 16 0 0 0 3.3035137968407238 8.889123728313635 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier renders with the given parameters and shift=0 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.80785280403231 101.95090322016128 L 105.69256448645169 103.12144515225805 A 16 16 0 0 0 106 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.80785280403231 101.95090322016128 A 10 10 0 0 1 99.23879532511287 103.8268343236509 L 104.78207252018059 106.12293491784143 A 16 16 0 0 0 105.69256448645169 103.12144515225805 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 99.23879532511287 103.8268343236509 A 10 10 0 0 1 98.31469612302546 105.55570233019603 L 103.30351379684072 108.88912372831363 A 16 16 0 0 0 104.78207252018059 106.12293491784143 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 98.31469612302546 105.55570233019603 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 101.31370849898477 111.31370849898477 A 16 16 0 0 0 103.30351379684072 108.88912372831363 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier renders with the given parameters and shift=1 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.80785280403231 101.95090322016128 L 105.69256448645169 103.12144515225805 A 16 16 0 0 0 106 100 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 99.80785280403231 101.95090322016128 A 10 10 0 0 1 99.23879532511287 103.8268343236509 L 104.78207252018059 106.12293491784143 A 16 16 0 0 0 105.69256448645169 103.12144515225805 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.23879532511287 103.8268343236509 A 10 10 0 0 1 98.31469612302546 105.55570233019603 L 103.30351379684072 108.88912372831363 A 16 16 0 0 0 104.78207252018059 106.12293491784143 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 98.31469612302546 105.55570233019603 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 101.31370849898477 111.31370849898477 A 16 16 0 0 0 103.30351379684072 108.88912372831363 Z"
        fill="var(--color-even)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.23879532511287 103.8268343236509 L 104.78207252018059 106.12293491784143 A 16 16 0 0 0 106 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.23879532511287 103.8268343236509 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 101.31370849898477 111.31370849898477 A 16 16 0 0 0 104.78207252018059 106.12293491784143 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 97.07106781186548 107.07106781186548 A 10 10 0 0 1 93.8268343236509 109.23879532511287 L 96.12293491784143 114.78207252018059 A 16 16 0 0 0 101.31370849898477 111.31370849898477 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 93.8268343236509 109.23879532511287 A 10 10 0 0 1 90 110 L 90 116 A 16 16 0 0 0 96.12293491784143 114.78207252018059 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter chunks is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.87688340595138 101.5643446504023 L 105.80301344952221 102.5029514406437 A 16 16 0 0 0 106 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.87688340595138 101.5643446504023 A 10 10 0 0 1 99.51056516295154 103.09016994374947 L 105.21690426072246 104.94427190999916 A 16 16 0 0 0 105.80301344952221 102.5029514406437 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 99.51056516295154 103.09016994374947 A 10 10 0 0 1 98.91006524188367 104.53990499739547 L 104.25610438701389 107.26384799583275 A 16 16 0 0 0 105.21690426072246 104.94427190999916 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 98.91006524188367 104.53990499739547 A 10 10 0 0 1 98.09016994374947 105.87785252292473 L 102.94427190999916 109.40456403667957 A 16 16 0 0 0 104.25610438701389 107.26384799583275 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 98.09016994374947 105.87785252292473 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 101.31370849898477 111.31370849898477 A 16 16 0 0 0 102.94427190999916 109.40456403667957 Z"
        fill="var(--color-even)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter chunks is modified 2`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.65925826289069 102.58819045102521 L 105.4548132206251 104.14110472164033 A 16 16 0 0 0 106 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.65925826289069 102.58819045102521 A 10 10 0 0 1 98.66025403784438 105 L 103.85640646055101 108 A 16 16 0 0 0 105.4548132206251 104.14110472164033 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 98.66025403784438 105 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 101.31370849898477 111.31370849898477 A 16 16 0 0 0 103.85640646055101 108 Z"
        fill="var(--color-even)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter left is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 40 100 A 10 10 0 0 1 39.80785280403231 101.95090322016128 L 45.69256448645169 103.12144515225805 A 16 16 0 0 0 46 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 39.80785280403231 101.95090322016128 A 10 10 0 0 1 39.23879532511287 103.8268343236509 L 44.78207252018059 106.12293491784143 A 16 16 0 0 0 45.69256448645169 103.12144515225805 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 39.23879532511287 103.8268343236509 A 10 10 0 0 1 38.314696123025456 105.55570233019603 L 43.303513796840726 108.88912372831363 A 16 16 0 0 0 44.78207252018059 106.12293491784143 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 38.314696123025456 105.55570233019603 A 10 10 0 0 1 37.071067811865476 107.07106781186548 L 41.31370849898476 111.31370849898477 A 16 16 0 0 0 43.303513796840726 108.88912372831363 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 40 40 0 0 1 99.23141121612922 107.80361288064513 L 105.1161228985486 108.9741548127419 A 46 46 0 0 0 106 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.23141121612922 107.80361288064513 A 40 40 0 0 1 96.95518130045147 115.3073372946036 L 102.49845849551919 117.60343788879413 A 46 46 0 0 0 105.1161228985486 108.9741548127419 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 96.95518130045147 115.3073372946036 A 40 40 0 0 1 93.25878449210181 122.22280932078408 L 98.24760216591707 125.5562307189017 A 46 46 0 0 0 102.49845849551919 117.60343788879413 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 93.25878449210181 122.22280932078408 A 40 40 0 0 1 88.2842712474619 128.2842712474619 L 92.5269119345812 132.5269119345812 A 46 46 0 0 0 98.24760216591707 125.5562307189017 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter shift is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.80785280403231 101.95090322016128 L 105.69256448645169 103.12144515225805 A 16 16 0 0 0 106 100 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 99.80785280403231 101.95090322016128 A 10 10 0 0 1 99.23879532511287 103.8268343236509 L 104.78207252018059 106.12293491784143 A 16 16 0 0 0 105.69256448645169 103.12144515225805 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.23879532511287 103.8268343236509 A 10 10 0 0 1 98.31469612302546 105.55570233019603 L 103.30351379684072 108.88912372831363 A 16 16 0 0 0 104.78207252018059 106.12293491784143 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 98.31469612302546 105.55570233019603 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 101.31370849898477 111.31370849898477 A 16 16 0 0 0 103.30351379684072 108.88912372831363 Z"
        fill="var(--color-even)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter top is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 40 A 10 10 0 0 1 99.80785280403231 41.95090322016128 L 105.69256448645169 43.121445152258055 A 16 16 0 0 0 106 40 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.80785280403231 41.95090322016128 A 10 10 0 0 1 99.23879532511287 43.8268343236509 L 104.78207252018059 46.122934917841434 A 16 16 0 0 0 105.69256448645169 43.121445152258055 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 99.23879532511287 43.8268343236509 A 10 10 0 0 1 98.31469612302546 45.55570233019602 L 103.30351379684072 48.889123728313635 A 16 16 0 0 0 104.78207252018059 46.122934917841434 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 98.31469612302546 45.55570233019602 A 10 10 0 0 1 97.07106781186548 47.071067811865476 L 101.31370849898477 51.31370849898476 A 16 16 0 0 0 103.30351379684072 48.889123728313635 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;

exports[`CurvedBarrier updates when the parameter width is modified 1`] = `
<body>
  <div>
    <g
      class="barrier curved-barrier"
    >
      
      <path
        d="M 100 100 A 10 10 0 0 1 99.80785280403231 101.95090322016128 L 103.73099392564522 102.73126450822579 A 14 14 0 0 0 104 100 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 99.80785280403231 101.95090322016128 A 10 10 0 0 1 99.23879532511287 103.8268343236509 L 102.93431345515802 105.35756805311125 A 14 14 0 0 0 103.73099392564522 102.73126450822579 Z"
        fill="var(--color-odd)"
      />
      
      <path
        d="M 99.23879532511287 103.8268343236509 A 10 10 0 0 1 98.31469612302546 105.55570233019603 L 101.64057457223564 107.77798326227443 A 14 14 0 0 0 102.93431345515802 105.35756805311125 Z"
        fill="var(--color-even)"
      />
      
      <path
        d="M 98.31469612302546 105.55570233019603 A 10 10 0 0 1 97.07106781186548 107.07106781186548 L 99.89949493661166 109.89949493661166 A 14 14 0 0 0 101.64057457223564 107.77798326227443 Z"
        fill="var(--color-odd)"
      />
    </g>
  </div>
</body>
`;
